Course image adding and view bind database