@@ -16,10 +16,14 @@ import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
+import org.springframework.web.multipart.MultipartFile;
 
+import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Base64;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -32,61 +36,62 @@ public class CourseServiceImpl implements CourseService {
 
     // Create course
     @Override
-    public CourseDto postCourse(CourseDto courseDto) {
+    public CourseDto postCourse(CourseDto courseDto, MultipartFile image) throws IOException {
         // Convert DTO to Entity
-        Course course = mapper.map(courseDto, Course.class);
+        Course course = courseDto.toEntity(mapper);
 
-        // Handle new schedules before saving the course
+        // Handle Image Upload
+        if (image != null && !image.isEmpty()) {
+            course.setImageData(image.getBytes());
+        }
+
+        // Handle Schedules
         List<Schedule> schedules = new ArrayList<>();
         if (courseDto.getSchedules() != null) {
             for (ScheduleDto scheduleDto : courseDto.getSchedules()) {
-                // Ensure scheduleId is null for new schedules
-                scheduleDto.setScheduleId(null);  // Explicitly set to null before mapping to the entity
+                scheduleDto.setScheduleId(null); // Ensure new schedules
 
-                // If scheduleDto contains an ID, it's an existing schedule, not allowed for a new course
-                if (scheduleDto.getScheduleId() != null) {
-                    throw new IllegalArgumentException("Cannot attach an existing schedule to a new course.");
-                }
-
-                // Create a new schedule from DTO
                 Schedule schedule = mapper.map(scheduleDto, Schedule.class);
-                schedule.setCourse(course); // Link the schedule to the course
+                schedule.setCourse(course); // Link schedule to course
                 schedules.add(schedule);
             }
         }
+        course.setSchedules(schedules); // set to course before saving
 
-        //  Handle many-to-many Users
+        // Handle Many-to-Many Users
         if (courseDto.getUsers() != null && !courseDto.getUsers().isEmpty()) {
             List<User> users = new ArrayList<>();
-            for (UserDto ud : courseDto.getUsers()) {
-                if (ud.getId() == null) {
-                    throw new IllegalArgumentException("User ID is required to enroll in course.");
+            for (UserDto userDto : courseDto.getUsers()) {
+                if (userDto.getId() == null) {
+                    throw new IllegalArgumentException("User ID is required.");
                 }
-                User user = userRepository.findById(ud.getId())
-                        .orElseThrow(() -> new NotFoundException("User not found with id: " + ud.getId()));
+
+                User user = userRepository.findById(userDto.getId())
+                        .orElseThrow(() -> new NotFoundException("User not found with id: " + userDto.getId()));
                 users.add(user);
-                // maintain the inverse side (optional)
-                user.getCourses().add(course);
+                user.getCourses().add(course); // maintain inverse (optional)
             }
             course.setUsers(users);
         }
 
-        // Set the schedules on the course (cascade will handle saving them)
-        course.setSchedules(schedules);
-
+        // Handle Vote (One-to-One)
         if (courseDto.getVote() != null) {
             Vote vote = courseDto.getVote().toEntity(mapper);
+            vote.setCourse(course);  // bidirectional link
             course.setVote(vote);
-            vote.setCourse(course);
         }
 
-        // Save course and all cascaded schedules
+        // Save Course (schedules and vote saved via cascade)
         Course savedCourse = courseRepository.save(course);
 
-        // Return the DTO of the saved course
-        return savedCourse.toDto(mapper);
-    }
+        // Convert to DTO and attach Base64 image
+        CourseDto savedDto = savedCourse.toDto(mapper);
+        if (savedCourse.getImageData() != null) {
+            savedDto.setImageBase64(Base64.getEncoder().encodeToString(savedCourse.getImageData()));
+        }
 
+        return savedDto;
+    }
 
 
 
@@ -94,13 +99,17 @@ public class CourseServiceImpl implements CourseService {
     // Get all courses
     @Override
     public List<CourseDto> getAllCourses() {
-        List<Course> courseRepositoryAll = courseRepository.findAll();
-        if (courseRepositoryAll.isEmpty()) {
-            return new ArrayList<>();
-        } else {
-            return courseRepositoryAll.stream().map(course -> course.toDto(mapper)).toList();
-        }
+        return courseRepository.findAll().stream()
+                .map(course -> {
+                    CourseDto dto = course.toDto(mapper);
+                    if (course.getImageData() != null) {
+                        dto.setImageBase64(Base64.getEncoder().encodeToString(course.getImageData()));
+                    }
+                    return dto;
+                })
+                .collect(Collectors.toList());
     }
+
 
     // Get course by id
     @Override
